--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-network-links:
   email: "shadenk30011@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: CuBeRJAN
+  github: lambdanil
 #  twitter: daattali
 #  patreon: DeanAttali
 #  youtube: c/daattali
